--- a/src/index.css
+++ b/src/index.css
@@ -5,4 +5,30 @@
 
 *{
   font-family: 'Nunito', sans-serif;
+  overflow-x: hidden;
 }
+
+/* for making scroll bar hide  */
+*::-webkit-scrollbar {
+  width: 16px;
+  /* display: none; */
+}
+
+*::-webkit-scrollbar-track {
+  border-radius: 8px;
+}
+
+*::-webkit-scrollbar-thumb {
+  height: 56px;
+  border-radius: 8px;
+  border: 4px solid transparent;
+  background-clip: content-box;
+  background-color: rgba(136, 136, 136, 0);
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(136, 136, 136, 0.758);
+}
+
+
+
